integration-tests/tests/errors/templates/resource-4xx.ejs
<!DOCTYPE html>
<html lang="en">
<head>
	<meta charset="UTF-8">
	<title>Errors test</title>
  <%- renderAgent({bufferTimeout: 1}) %>
</head>
<body>
	<h1>Dom parsing error simulation</h1>
	<img src="/nonexistent.png" />
</body>
</html>
